--- a/koi-care-front-end/src/styles/KoiFishDetails.css
+++ b/koi-care-front-end/src/styles/KoiFishDetails.css
@@ -1,5 +1,3 @@
-/* KoiFishDetails.css */
-
 .koifish-details-container {
   padding: 20px;
   background: linear-gradient(to right, salmon, #2193b0);
@@ -13,6 +11,30 @@
   margin-bottom: 20px;
 }
 
+.koifish-details-container label {
+  display: block;
+  margin-bottom: 20px;
+  color: #555;
+  font-size: 16px;
+}
+
+.koifish-details-container select {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  margin-top: 5px;
+  box-sizing: border-box;
+  font-size: 16px;
+  background-color: #fff;
+  transition: border-color 0.2s;
+}
+
+.koifish-details-container select:focus {
+  border-color: #2193b0;
+  outline: none;
+}
+
 .koi-list {
   display: flex;
   flex-wrap: wrap;
@@ -21,6 +43,7 @@
 }
 
 .koi {
+  position: relative;
   background-color: #fff;
   border: 1px solid #ddd;
   border-radius: 8px;
@@ -49,6 +72,21 @@
   height: auto;
   border-radius: 8px;
   margin-top: 10px;
+}
+
+.status-icon {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 30px;
+}
+
+.status-live {
+  color: pink;
+}
+
+.status-deceased {
+  color: purple;
 }
 
 .update-btn,
